# Shooter

./: meson.build
src/: main.c
src/common/: common.h  defn.h
src/common/data/: base.h  defs.h  effect.h  entities.h  entity.h
src/logic/core/: bullets.c  bullets.h  core.c  core.h  effects.c  effects.h  motion.c  motion.h  rendering.c  rendering.h
src/logic/init/: init.c  init.h
src/logic/input/: input.c
src/logic/render/: render.c  render.h
src/logic/util/: util.c  util.h
